移除Python相关内容，使用webpack-dev-server启动服务

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>gRPC-Web Example</title>
-<script src="./dist/main.js"></script>
+<script src="main.js"></script>
 </head>
 <body>
 </body>
